--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -1,5 +1,17 @@
 /*
-Theme Name: askkanzi theme
+Theme Name: Ask Kanzi theme 
+Theme URI: http://wordpress.org/themes/askkanzi
+Author: Chaz Selph
+Author URI: https://chazselph.github.io
+Description: Ask Kanzi custom theme
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
+Text Domain: askkanzi.com
+
+This theme, like WordPress, is licensed under the GPL.
+
 */
 
 /*body.custom-background {
