--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -754,3 +754,25 @@ div.comment:first-of-type {
 .comment-reply-title small a:hover {
 	text-decoration: underline;
 }
+
+
+
+.wp-block-search .wp-block-search__input {
+    margin-left:  5%;
+    margin-right:  3%;
+}
+
+.wp-block-search__button {
+    margin-right:  25%;
+  transition-duration: 0.4s;
+  border-radius: 8px;
+  text-align: center;
+padding: 15px 15px !important;
+
+}
+.wp-block-search__button:hover {
+  background-color: #6f42c1; 
+  color: white;
+}
+
+}
