--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -775,4 +775,13 @@ padding: 15px 15px !important;
   color: white;
 }
 
+.front-page-p {
+    font-size:  18px;
+    margin-left:  10%;
+    margin-right:  15%;
+    line-height: 1.8;
+    margin-bottom: 5%;
+
+}
+
 }
