--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -51,9 +51,7 @@ This theme, like WordPress, is licensed under the GPL.
     /* Font Sizes */
     --font-normal: 1em;
     --font-small: 0.8125rem;
-    /* Sidebar */
-    --sidebar-width: 280px;
-    --content-max-width: 860px;
+
 }
 
 *,
@@ -210,7 +208,7 @@ h6 {
     max-width: var(--content-max-width);
 }
 .page-title {
-    position:sticky;
+    position: static;
     top:0;
     z-index:9999;
     transition:all .2s;
@@ -221,7 +219,7 @@ h6 {
 .page-title .heading {
     font-size: 50px;
     font-weight: bold;
-    color:white;
+    color: #06130E;
     font-family: 'Fjalla One', sans-serif;
 }
 
@@ -232,10 +230,7 @@ h6 {
 .footer a {
     color: #fff
 }
-.gradient{
-    background: rgb(43,43,43);
-    background: linear-gradient(151deg, var(--primary) 0%, var(--pink) 35%,var(--orange) 100%) !important;
-}
+
 .content {
     margin-bottom: 35%;
 }
@@ -792,4 +787,106 @@ div.comment:first-of-type {
     margin-bottom: 5%;
 
 }
+.lead {
+    font-family:  'mundo sans pro book',sans-serif;
+    line-height: 41px;
+    font-weight: 300;
+    text-align: center;
+}
+
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #24361F;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+
+  text-decoration:  none;
+}
+
+
+.carousel-container {
+    position: relative;
+    text-align: center;
+    color: #fff;
+    margin-bottom:  25px;
+}
+
+.bottom-left {
+    font-size:  1.3rem;
+    position: absolute;
+    bottom: 8px;
+    left: 20%;
+    font-style:  italic;
+}
+
+.image-block {
+    max-width: 80%;
+    height: auto;
+}
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: Open Sans;
+}
+
+.topnav a:hover {
+  color: darkolivegreen;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+}
+
 }
