--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -188,15 +188,17 @@ h6 {
 .logo{
     width:78px;
 }
+.social-list {
+    background-color: #e5efda;
+
+}
 .social-list a {
-    width: 32px;
-    height: 32px;
+    width: 50px;
+    height: 50px;
     padding-top: 5px;
     display: inline-block;
     text-align: center;
-    border-radius: 50%;
     transition: all 0.2s ease-in-out;
-    background-color: #fff
 }
 
 .social-list a:hover {
@@ -806,6 +808,7 @@ div.comment:first-of-type {
     line-height: 41px;
     font-weight: 300;
     text-align: center;
+    margin-bottom: 15px;
 }
 
 
@@ -844,7 +847,7 @@ li a:hover {
 }
 
 .bottom-left {
-    font-size:  1.3rem;
+    font-size:  1rem;
     position: absolute;
     bottom: 8px;
     left: 20%;
@@ -894,13 +897,15 @@ font-family: 'Oswald', sans-serif;
     .card-body {
         grid-column-start: 1;
         grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 3;
     }
 
     .wrapper {
           display: grid;
           grid-template-columns: 1;
           gap: 10px;
-          grid-auto-rows: 1fr 1fr 1fr;
+          grid-auto-rows: minmax(300px, 1fr)
         }
 
   .topnav.responsive {position: relative;}
@@ -918,7 +923,7 @@ font-family: 'Oswald', sans-serif;
 
 .featured {
     margin-bottom: 20px;
-    box-shadow: 1px 1px 2px #000000;;
+    box-shadow: 1px 1px 2px #000000;
 
 }
 
@@ -941,26 +946,47 @@ font-family: 'Oswald', sans-serif;
 }
 
 .featured-image {
-    max-width: 400px;
     height:  auto;
     grid-column: 1;
+    padding-top: 15px;
+    padding-left: 15px;
 }
-
 
 .card-body {
     grid-column-start: 2;
     grid-column-end: 5;
+    font-weight: 300;
+    line-height: 1.5;
+    font-size: 16px;
 }
 @media screen and (max-width: 600px) {
     .card-body {
         grid-column-start: 1;
         grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 4;
     }
+    .featured-image {
+    grid-row: 4;
+    max-width: 312px;
+    padding-top: 0;
+    padding-left: 0;
+    }
+
 }
 .card-title {
     font-family: 'Oswald', sans-serif;
-        font-size: 21px;
+    font-size: 21px;
     font-weight: 900;
+}
+
+.social-container {
+   display: flex;
+  justify-content: center;
+
+}
+.card-text {
+    width: 75%;
 }
 
 }
