--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -84,9 +84,11 @@ h6 {
 
 .btn {
     font-weight: bold;
-    padding: .375rem 1rem;
-    height: 2.75rem;
+    padding: 10px;
+    height: 50px;
     transition: all 0.4s ease-in-out;
+    font-size: 16px;
+    font-family: 'Archivo', sans-serif;
 }
 
 
@@ -98,7 +100,8 @@ h6 {
 .btn-primary {
     color: #fff;
     background-color: #24361F;
-    border-color: #CBFFEA;
+    border: none;
+    border-radius: 5px;
 }
 .btn-primary:hover {
     background-color:  #A8BA9A;
@@ -228,13 +231,14 @@ h6 {
 .page-title .heading {
     font-size: 50px;
     font-weight: bold;
-    color: #06130E;
+    color: white;
     font-family: 'Fjalla One', sans-serif;
 }
 
 .footer {
     color: rgba(255, 255, 255, 0.7);
     background-color: #e5efda;
+
 }
 
 .footer a {
@@ -812,8 +816,23 @@ div.comment:first-of-type {
     text-align: center;
     margin-bottom: 15px;
     font-size: 21px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
+.lead-header {
+    color: white;
+    margin-left: 15%;
+    margin-right: 15%;
+    background-color: transparent;
+    font-family:  'mundo sans pro book',sans-serif;
+    line-height: 41px;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 24px;
+    text-shadow:  1px 1px black;
+}
 
 
 ul {
@@ -1063,4 +1082,111 @@ font-family: 'Oswald', sans-serif;
 .pan-image {
     height: auto;
     max-width: 500px;
+}
+
+
+
+.bg {
+    height: 100%;
+  width: 100%; 
+
+  opacity: 0.9;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  /* Add the blur effect */
+/*  filter: blur(8px);
+  -webkit-filter: blur(8px);*/
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.jumbotron {
+    margin: 25px;
+}
+
+/* Bottom right text */
+.text-block {
+  position: absolute;
+  top: 150px;
+  right: 50px;
+  background-color: none;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.heading{
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    font-family: 'Fjalla One', sans-serif;
+    text-shadow: 2px 1px black;
+    position: relative;
+}
+
+.container-header {
+    position: relative;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/kanzi-lights-fire-vector.png");
+
+  /* Set a specific height */
+  min-height: 250px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;}
+
+  .parallax2 {
+  /* The image used */
+  background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/kanzi-lights-fire-vector.png");
+
+  /* Set a specific height */
+  min-height: 250px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;}
+
+
+  .parallax3 {
+  /* The image used */
+  background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/matata-looks-distance.png");
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;}
+
+
+  .display-4 {
+    font-size: 35px !important;
+    text-align: center;
+  }
+
+.hero-button {
+    display: block;
+    width: 10%;
+    margin: auto;
 }
