--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -835,7 +835,7 @@ div.comment:first-of-type {
     line-height: 41px;
     text-align: center;
     margin-bottom: 15px;
-    font-size: 24px;
+    font-size: 20px;
     text-shadow:  1px 1px black;
     background-color: rgba(0,0,0,0.4);
     z-index: 2;
@@ -1204,7 +1204,7 @@ font-family: 'Oswald', sans-serif;
 .card {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     overflow: auto;
-    max-height: 400px;
+    max-height: 450px;
 }
 
 
@@ -1244,9 +1244,12 @@ font-family: 'Oswald', sans-serif;
     float: right;
     font-size: 18px;
     text-align: right;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.7);
     color: white;
     width: 70%;
+    box-shadow: 5px 5px 5px #888;
+    border-color: rgba(0,0,0,0.7);
+    border-radius: 2px;
 }
 .pan-btn {
 
@@ -1255,4 +1258,14 @@ font-family: 'Oswald', sans-serif;
 .parallax2-container {
     display: block;
     float: right;
+}
+
+.sue-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn-sue {
+    width: 25%;
 }
