--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -89,8 +89,7 @@ p {
 }
 .btn {
     font-weight: bold;
-    padding: 10px;
-    height: 50px;
+    padding: 15px;
     transition: all 0.4s ease-in-out;
     font-size: 16px;
     font-family: 'Archivo', sans-serif;
@@ -127,7 +126,7 @@ p {
 }
 
 .theme-bg-dark {
-    background: var(--dark) !important;
+    background: #24361F !important;
 }
 
 .header {
@@ -176,8 +175,9 @@ p {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(256,256,256, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-.header .nav-item {
-    font-weight: bold;
+.nav-item {
+
+font-weight: 300;
     font-family: 'Oswald', sans-serif;
     font-size: 25px;
 }
@@ -266,7 +266,7 @@ p {
     margin-bottom: 35%;
 }
 .content .post .title {
-    font-size: 1.275rem
+    
 }
 
 .content .post .title a {
@@ -360,6 +360,7 @@ p {
     line-height: 1.6
 }
 
+
 .content .content-body h1 {
     font-size: 2.125rem
 }
@@ -383,6 +384,18 @@ p {
 .content .content-body h6 {
     font-size: 1.125rem
 }
+
+.content .content-header {
+    font-size: 40px;
+    text-align: center;
+} 
+.content p {
+    font-size: 16px;
+    line-height: 1.8;
+    font-family:  'mundo sans pro book',sans-serif;
+    font-weight: 300;
+}
+
 
 .content .image-caption {
     color: #8f8f8f;
@@ -879,20 +892,7 @@ li a:hover {
 }
 
 
-.carousel-container {
-    position: relative;
-    text-align: center;
-    color: #fff;
-    margin-bottom:  25px;
-}
 
-.bottom-left {
-    font-size:  1rem;
-    position: absolute;
-    bottom: 8px;
-    left: 20%;
-    font-style:  italic;
-}
 
 .image-block {
     max-width: 80%;
@@ -900,30 +900,6 @@ li a:hover {
 }
 
 
-.topnav {
-  overflow: hidden;
-  background-color: #fff;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-font-family: 'Oswald', sans-serif;
-
-}
-
-.topnav a:hover {
-  color: darkolivegreen;
-}
-
-.topnav .icon {
-  display: none;
-}
 
 
 @media screen and (max-width: 600px) {
@@ -943,17 +919,6 @@ font-family: 'Oswald', sans-serif;
         grid-row-end: 3;
     }
 
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: center;
-  }
 }
 
 .featured {
@@ -1098,6 +1063,10 @@ font-family: 'Oswald', sans-serif;
       background-color: rgba(0, 0, 0, 0.5);
 }
 
+.bg-light {
+  background-color: #fff !important;
+}
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -1105,10 +1074,6 @@ font-family: 'Oswald', sans-serif;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-}
-
-.jumbotron {
-    margin: 25px;
 }
 
 
@@ -1134,7 +1099,16 @@ font-family: 'Oswald', sans-serif;
 .container-header {
     position: relative;
 }
+.fa-lg {
+    font-size: 2.8em !important;
+    height: 30px !important;
+    line-height: 0em !important;
+}
 
+.row > * {
+
+  width: 33%;
+}
 .parallax {
   /* The image used */
   background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/teco-touches-ipad.png");
@@ -1150,7 +1124,7 @@ font-family: 'Oswald', sans-serif;
 
   .parallax2 {
   /* The image used */
-  background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/originalkeyboard.png");
+  background-image: url("/wordpress/wp-content/themes/askkanzi/assets/images/susie3.png");
 
   /* Set a specific height */
   min-height: 400px;
@@ -1169,11 +1143,13 @@ font-family: 'Oswald', sans-serif;
   /* Set a specific height */
   min-height: 500px;
 
+
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;}
+  background-size: cover;
+}
 
 
   .display-4 {
@@ -1193,6 +1169,9 @@ font-family: 'Oswald', sans-serif;
   justify-content: center;
 }
 
+.date {
+    font-size: 12px;
+}
 
 .email-field {
     width: 75%;
@@ -1208,7 +1187,6 @@ font-family: 'Oswald', sans-serif;
 .card {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     overflow: auto;
-    max-height: 450px;
 }
 
 
@@ -1446,6 +1424,101 @@ font-family: 'Oswald', sans-serif;
     text-align: center;
     text-decoration: none;
 }
+
+.badge-primary {
+    color: black;
+    background-color: #e5efda;
+}
+
+
+
+
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+.carousel h1 {
+    color: white;
+}
+/* Carousel base class */
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 45rem;
+  overflow: hidden;
+  background-color: #fff;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 45rem;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -.05rem;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
+
+
 
 
 
