--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -79,7 +79,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: var(--gray-dark);
+    color: #24361F !important;
     font-weight: 800 !important;
         font-family: 'Roboto Mono', monospace;
 }
@@ -198,9 +198,13 @@ main {
 
 .nav-item {
 
-font-weight: 300;
+    font-weight: 300;
     font-family: 'Oswald', sans-serif;
     font-size: 25px;
+
+}
+.nav-link {
+    color: #663399 !important;
 }
 
 .header .nav-item.active a {
@@ -812,9 +816,11 @@ div.comment:first-of-type {
 }
 
 .wp-block-search__button {
-    margin-right:  25%;
+    margin-right:  5%;
+    color: white;
+    background-color: #24361F;
     transition-duration: 0.4s;
-    border-radius: 8px;
+    border-radius: 10px;
     text-align: center;
     padding: 15px 15px !important;
 
@@ -873,6 +879,9 @@ div.comment:first-of-type {
     z-index: 2;
 }
 
+.first-slide {
+
+}
 
 ul {
   list-style-type: none;
@@ -898,10 +907,7 @@ li a:hover {
   text-decoration:  none;
 }
 
-.row > * {
-  flex-shrink: 0;
-  width: unset !important;
-}
+
 
 
 .image-block {
@@ -959,6 +965,9 @@ li a:hover {
 
 @media screen and (max-width: 600px) {
 
+    .pan-paragraph {
+        width: 100%;
+    }
     #g6770-name, #g6770-email, #contact-form-comment-g6770-message {
         width: 100% !important;
     }
@@ -1025,7 +1034,6 @@ li a:hover {
 .blockquote {
     color: #fff;
     position: absolute; /* Position the background text */
-    bottom: -15px; /* At the bottom. Use top:0 to append it to the top */
     background: rgb(0, 0, 0); /* Fallback color */
     background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
     width: 100%; /* Full width */
@@ -1122,6 +1130,13 @@ li a:hover {
     line-height: 0em !important;
 }
 
+.fixed-top {
+position: absolute;
+top: 0;
+right: 0;
+left: 0;
+z-index: 1030;
+}
 
 .parallax {
   /* The image used */
@@ -1145,7 +1160,7 @@ li a:hover {
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
-  background-position: center;
+  background-position: right;
   background-repeat: no-repeat;
 }
 
@@ -1218,10 +1233,10 @@ li a:hover {
     text-align: right;
     background-color: rgba(0,0,0,0.7);
     color: white;
-    width: 70%;
     box-shadow: 5px 5px 5px #888;
     border-color: rgba(0,0,0,0.7);
     border-radius: 2px;
+    width: 60%;
 }
 
 .parallax2-container {
@@ -1407,14 +1422,16 @@ li a:hover {
 }
 
 
-
+.badge {
+    font-size: 50% !important;
+}
 
 
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 .carousel h1 {
-    color: white;
+    color: white !important;
 }
 /* Carousel base class */
 
@@ -1436,6 +1453,11 @@ li a:hover {
   left: 0;
   min-width: 100%;
   height: 45rem;
+  min-height: 400px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
 }
 
 
