--- a/wp-content/themes/askkanzi/style.css
+++ b/wp-content/themes/askkanzi/style.css
@@ -824,11 +824,16 @@ div.comment:first-of-type {
     min-width: 150px;
 
 }
+.wp-block-search {
+    padding-bottom: 20px;
+}
 .wp-block-search__button:hover {
     background-color: #6f42c1; 
     color: white;
 }
-
+.wp-block-search__input {
+    border-radius: 15px;
+}
 .front-page-p {
     font-size:  18px;
     margin-right:  5%;
@@ -964,6 +969,14 @@ li a:hover {
 
 @media screen and (max-width: 600px) {
 
+    .carousel-button {
+          width: 100% !important;
+          left: 0 !important;
+          right: 0 !important;
+          margin-left: 10px;
+          margin-right: 10px;
+    }
+
     .media-paragraph {
         width: 100% !important;
     }
@@ -1039,7 +1052,7 @@ li a:hover {
     position: absolute; /* Position the background text */
     background: rgb(0, 0, 0); /* Fallback color */
     background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    width: 100%; /* Full width */
+    
     padding: 1px; /* Some padding */
 }
 
@@ -1240,7 +1253,6 @@ z-index: 1030;
     box-shadow: 5px 5px 5px #888;
     border-color: rgba(0,0,0,0.7);
     border-radius: 2px;
-    width: 60%;
 }
 
 .parallax2-container {
@@ -1443,11 +1455,34 @@ z-index: 1030;
 /* Carousel base class */
 
 /* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
 
+.carousel-caption {
+  position: absolute;
+  bottom: 6rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #fff;
+  right: 0 !important;
+  left: 0 !important;
+  text-align: center;
+}
+.carousel-button {
+  position: absolute;
+  bottom: 3rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #fff;
+  text-align: center;
+  width: 10%;
+  left: 45%;
+}
+.carousel-header {
+  bottom: 50%;
+  font-size: 1.8rem;
+  z-index: 10;
+  left: 33%;
+
+}
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 45rem;
